feat(backend): consolidar despesas por categoria na matriz de 24 meses (Story 4.3)
- Adiciona endpoint GET /api/consolidacao/por-categoria com validação de mesAno e 401
- Implementa cálculo consolidado por categoria com projeção O(N) para despesas fixas e variáveis
- Ordena categorias alfabeticamente por descrição
- Define SEM_CATEGORIA_ID seguro (-1L) para lançamentos sem categoria
- Adiciona testes unitários abrangendo datas nulas, limites temporais e parâmetros inválidos